# gdarch

./: .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
garch/: cli.py
gdarch/: cli.py
tests/: test_cli.py
