[tool.poetry]
name = "gdarch"
version = "0.1.0"
description = "CLI tool to archive a Google Drive folder and replace it with the archive"
authors = ["Taro Furuya <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/gdarch"
packages = [{include = "gdarch"}]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.0.0"
google-auth = "^2.0.0"
google-auth-oauthlib = "^1.0.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gdarch = "gdarch.cli:main"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true 