[tool.poetry]
name = "gdarch"
version = "0.1.1"
description = "CLI tool to archive a Google Drive folder and replace it with the archive. Helps to free up Google Drive storage space by compressing rarely accessed folders while keeping them accessible."
authors = ["Taro Furuya <taro.furuya@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/taross-f/gdarch"
homepage = "https://github.com/taross-f/gdarch"
keywords = ["google-drive", "archive", "compression", "backup", "storage-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
]
packages = [{include = "gdarch"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.187.0"
google-auth = "^2.15.0"
google-auth-oauthlib = "^1.2.3"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^25.12.0"
isort = "^7.0.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gdarch = "gdarch.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true 